Obscured.RRD Fixed footer not aligning in the bootom

--- a/public/styles/docs.css
+++ b/public/styles/docs.css
@@ -174,6 +174,7 @@ h4 code {
   color: #99979c;
   text-align: center;
   background-color: #293036;
+  overflow: hidden;
 }
 .bs-docs-footer a {
   color: #fff;
